# Discord_Support_Tracker

./: .env.example  .gitignore  PRD_Discord_Support_Bot.md  README.md  Support_Bot_Summary.md  discord_support_bot.py  google_apps_script.js  google_apps_script_example.js  migrate_history.py  pyproject.toml  requirements.txt
